tests/ui/macros/issue-105225.stderr
error: argument never used
  --> $DIR/issue-105225.rs:3:21
   |
LL |     println!("{x}", x);
   |              -----  ^ argument never used
   |              |
   |              formatting specifier missing
   |
help: the formatting string captures that binding directly, it doesn't need to be included in the argument list
  --> $DIR/issue-105225.rs:3:16
   |
LL |     println!("{x}", x);
   |                ^    - this can be removed
   |                |
   |                this formatting argument captures `x` directly

error: multiple unused formatting arguments
  --> $DIR/issue-105225.rs:6:25
   |
LL |     println!("{x} {y}", x, y);
   |              ---------  ^  ^ argument never used
   |              |          |
   |              |          argument never used
   |              multiple missing formatting specifiers
   |
help: the formatting string captures that binding directly, it doesn't need to be included in the argument list
  --> $DIR/issue-105225.rs:6:16
   |
LL |     println!("{x} {y}", x, y);
   |                ^   ^    -  - this can be removed
   |                |   |    |
   |                |   |    this can be removed
   |                |   this formatting argument captures `y` directly
   |                this formatting argument captures `x` directly

error: multiple unused formatting arguments
  --> $DIR/issue-105225.rs:8:25
   |
LL |     println!("{x} {y}", y, x);
   |              ---------  ^  ^ argument never used
   |              |          |
   |              |          argument never used
   |              multiple missing formatting specifiers
   |
help: the formatting string captures that binding directly, it doesn't need to be included in the argument list
  --> $DIR/issue-105225.rs:8:16
   |
LL |     println!("{x} {y}", y, x);
   |                ^   ^    -  - this can be removed
   |                |   |    |
   |                |   |    this can be removed
   |                |   this formatting argument captures `y` directly
   |                this formatting argument captures `x` directly

error: argument never used
  --> $DIR/issue-105225.rs:10:27
   |
LL |     println!("{} {y}", x, y);
   |              --------     ^ argument never used
   |              |
   |              formatting specifier missing
   |
help: the formatting string captures that binding directly, it doesn't need to be included in the argument list
  --> $DIR/issue-105225.rs:10:19
   |
LL |     println!("{} {y}", x, y);
   |                   ^       - this can be removed
   |                   |
   |                   this formatting argument captures `y` directly

error: argument never used
  --> $DIR/issue-105225.rs:12:45
   |
LL |     println!("{} {} {y} {} {}", y, y, y, y, y);
   |              -----------------              ^ argument never used
   |              |
   |              formatting specifier missing
   |
help: the formatting string captures that binding directly, it doesn't need to be included in the argument list
  --> $DIR/issue-105225.rs:12:22
   |
LL |     println!("{} {} {y} {} {}", y, y, y, y, y);
   |                      ^                      - this can be removed
   |                      |
   |                      this formatting argument captures `y` directly

error: multiple unused formatting arguments
  --> new.rs:14:37
   |
14 |     println!("{x} {x} {y} {x} {x}", x, y, x, y, y);
   |              ---------------------  ^  ^  ^  ^  ^ argument never used
   |              |                      |  |  |  |
   |              |                      |  |  |  argument never used
   |              |                      |  |  argument never used
   |              |                      |  argument never used
   |              |                      argument never used
   |              multiple missing formatting specifiers
   |
help: the formatting string captures that binding directly, it doesn't need to be included in the argument list
  --> new.rs:14:16
   |
LL |     println!("{x} {x} {y} {x} {x}", x, y, x, y, y);
   |                ^                    - this can be removed
   |                |
   |                this formatting argument captures `y` directly
error: aborting due to 6 previous errors

